[gd_scene load_steps=21 format=3 uid="uid://cd1ulygu81jfp"]

[ext_resource type="Script" path="res://scripts/level-two.gd" id="1_d64uk"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2_yopyf"]
[ext_resource type="Texture2D" uid="uid://b6xbufjpghh6w" path="res://sprites/cleric.png" id="3_dxm87"]
[ext_resource type="Script" path="res://scripts/RitualCircle.gd" id="4_gvw5g"]
[ext_resource type="Texture2D" uid="uid://cgktvj01rvd0j" path="res://sprites/ward.png" id="5_5cm04"]
[ext_resource type="Script" path="res://scripts/Flame.gd" id="6_rqlp1"]
[ext_resource type="Texture2D" uid="uid://cphfeucx3ai4u" path="res://sprites/flame.png" id="7_qtobr"]
[ext_resource type="TileSet" uid="uid://cb6qxnvmr7mj2" path="res://tilesets/tiles.tres" id="8_5fdop"]
[ext_resource type="Script" path="res://scripts/Chest.gd" id="11_d04lm"]
[ext_resource type="Script" path="res://scripts/Potion.gd" id="11_g7q7m"]
[ext_resource type="Texture2D" uid="uid://dclixwb4er7or" path="res://sprites/potion.png" id="11_hdq1k"]
[ext_resource type="Theme" uid="uid://b4v7jhn0yyqbw" path="res://themes/base_theme.tres" id="13_nos5s"]
[ext_resource type="Texture2D" uid="uid://v0ckb1tf3en0" path="res://sprites/chest.png" id="16_y7q0s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m1hp8"]
radius = 19.0
height = 110.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ib8rc"]
radius = 18.9737

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cncxb"]
radius = 7.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m164k"]
size = Vector2(46, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jeni6"]
size = Vector2(42, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fit0w"]
size = Vector2(56, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufjkh"]
size = Vector2(58, 62)

[node name="LevelTwo" type="Node2D" groups=["unapusable"]]
position = Vector2(-1, 0)
script = ExtResource("1_d64uk")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, 0)

[node name="Player" type="Area2D" parent="." groups=["pausable"]]
light_mask = 2
visibility_layer = 2
z_index = 3
position = Vector2(-548, -227)
scale = Vector2(0.5, 0.5)
collision_layer = 7
collision_mask = 7
script = ExtResource("2_yopyf")

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
texture = ExtResource("3_dxm87")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_m1hp8")

[node name="RayCast2D" type="RayCast2D" parent="Player"]

[node name="Caster" type="Marker2D" parent="Player"]
position = Vector2(40, 0)

[node name="FireboltCooldown" type="Timer" parent="Player"]

[node name="RitualCircle" type="Area2D" parent="." groups=["rituals"]]
z_index = 2
position = Vector2(-31, -225)
collision_layer = 14
collision_mask = 14
script = ExtResource("4_gvw5g")

[node name="Sprite2D" type="Sprite2D" parent="RitualCircle"]
texture = ExtResource("5_5cm04")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RitualCircle"]
shape = SubResource("CircleShape2D_ib8rc")

[node name="Flame" type="Area2D" parent="." groups=["flames"]]
z_index = 2
position = Vector2(-28, 165)
collision_layer = 14
collision_mask = 14
script = ExtResource("6_rqlp1")

[node name="Sprite2D" type="Sprite2D" parent="Flame"]
texture = ExtResource("7_qtobr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flame"]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_cncxb")

[node name="Map" type="TileMap" parent="."]
tile_set = ExtResource("8_5fdop")
format = 2
layer_0/name = "Walls"
layer_0/navigation_enabled = false
layer_1/name = "Platforms"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -196601, 0, 0, -196602, 0, 0, -262137, 0, 0, 196599, 0, 0, 262135, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 262137, 0, 0, 196601, 0, 0, 196600, 0, 0, 262136, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, -196617, 3, 0, 196616, 4, 0)
layer_2/name = "Void"
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(-327690, 2, 0, -262154, 2, 0, -196618, 2, 0, -10, 2, 0, 65526, 2, 0, 131062, 2, 0, 196598, 2, 0, 262134, 2, 0, 327670, 2, 0, 393206, 2, 0, 327689, 2, 0, 393207, 2, 0, 393208, 2, 0, 393209, 2, 0, 393210, 2, 0, 393211, 2, 0, 393212, 2, 0, 393213, 2, 0, 393214, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 262153, 2, 0, 196617, 2, 0, 131081, 2, 0, 65545, 2, 0, 9, 2, 0, -65527, 2, 0, -131063, 2, 0, -196599, 2, 0, -262135, 2, 0, -327671, 2, 0, -393207, 2, 0, -393208, 2, 0, -393209, 2, 0, -393210, 2, 0, -393211, 2, 0, -393212, 2, 0, -393213, 2, 0, -393214, 2, 0, -393215, 2, 0, -393216, 2, 0, -327681, 2, 0, -327682, 2, 0, -327683, 2, 0, -327684, 2, 0, -327685, 2, 0, -327686, 2, 0, -327687, 2, 0, -327688, 2, 0, -327689, 2, 0, -131082, 2, 0, -65546, 2, 0, -262153, 1, 0, -262152, 1, 0, -262151, 1, 0, -262150, 1, 0, -262149, 1, 0, -262148, 1, 0, -262147, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -327675, 1, 0, -196603, 1, 0, -196604, 1, 0, -196605, 1, 0, -196606, 1, 0, -196607, 1, 0, -196608, 1, 0, -131073, 1, 0, -131074, 1, 0, -131075, 1, 0, -131076, 1, 0, -131077, 1, 0, -131078, 1, 0, -131079, 1, 0, -131080, 1, 0, -131081, 1, 0, -65545, 1, 0, -9, 1, 0, 65527, 1, 0, 131063, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0, 196602, 1, 0, 65530, 1, 0, -6, 1, 0, -65542, 1, 0, -65543, 1, 0, -65544, 1, 0, -8, 1, 0, 65528, 1, 0, -7, 1, 0, 65529, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 8, 1, 0, -65528, 1, 0, -131064, 1, 0, -131065, 1, 0, -131066, 1, 0, -131067, 1, 0, -65531, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, -65529, 1, 0, -65530, 1, 0, -131068, 1, 0, -131069, 1, 0, -131070, 1, 0, -131071, 1, 0, -131072, 1, 0, -65537, 1, 0, -65538, 1, 0, -65539, 1, 0, -65540, 1, 0, -65541, 1, 0, -5, 1, 0, -4, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, 4, 1, 0, 3, 1, 0, 2, 1, 0, 1, 1, 0, 0, 1, 0, 65535, 1, 0, 65534, 1, 0, 65533, 1, 0, 65532, 1, 0, 65531, 1, 0)

[node name="Chest" type="Area2D" parent="." groups=["chests"]]
light_mask = 2
visibility_layer = 2
z_index = 2
position = Vector2(-480, 224)
collision_layer = 14
collision_mask = 14
script = ExtResource("11_d04lm")

[node name="Sprite2D" type="Sprite2D" parent="Chest"]
texture = ExtResource("16_y7q0s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_m164k")

[node name="Potion" type="Area2D" parent="." groups=["potions"]]
z_index = 2
position = Vector2(545, -288)
collision_layer = 14
collision_mask = 14
script = ExtResource("11_g7q7m")

[node name="Sprite2D" type="Sprite2D" parent="Potion"]
texture = ExtResource("11_hdq1k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Potion"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_jeni6")

[node name="Goal" type="Area2D" parent="."]
z_index = 1
position = Vector2(533, 208)

[node name="GoalCollider" type="CollisionShape2D" parent="Goal"]
position = Vector2(10, 17)
shape = SubResource("RectangleShape2D_fit0w")

[node name="Back" type="Area2D" parent="."]
z_index = 1
position = Vector2(-553, -248)

[node name="BackCollider" type="CollisionShape2D" parent="Back"]
position = Vector2(8, 23)
shape = SubResource("RectangleShape2D_ufjkh")

[node name="HUD" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_left = -579.0
offset_top = -327.0
offset_right = 572.0
offset_bottom = 320.0

[node name="HP" type="Label" parent="HUD" groups=["hp"]]
layout_mode = 0
offset_left = 972.0
offset_top = 619.0
offset_right = 1096.0
offset_bottom = 642.0
text = "Rituals Left: 0"

[node name="Tooltip" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 363.0
offset_top = 130.0
offset_right = 792.0
offset_bottom = 199.0
theme = ExtResource("13_nos5s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Keys" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 1092.0
offset_top = 619.0
offset_right = 1146.0
offset_bottom = 642.0
text = "Keys: 0"

[connection signal="timeout" from="Player/FireboltCooldown" to="Player" method="_on_firebolt_cooldown_timeout"]
[connection signal="area_entered" from="RitualCircle" to="Player" method="_on_ritual_circle_area_entered" binds= [Vector2(0, 1)]]
[connection signal="area_exited" from="RitualCircle" to="Player" method="_on_ritual_circle_area_exited"]
[connection signal="area_entered" from="Flame" to="Player" method="_on_flame_area_entered" binds= [Vector2(0, 1)]]
[connection signal="area_exited" from="Flame" to="Player" method="_on_flame_area_exited"]
[connection signal="area_entered" from="Chest" to="Player" method="_on_chest_area_entered" binds= ["fire_amulet"]]
[connection signal="area_exited" from="Chest" to="Player" method="_on_chest_area_exited"]
[connection signal="area_entered" from="Potion" to="Player" method="_on_potion_area_entered"]
[connection signal="area_exited" from="Potion" to="Player" method="_on_potion_area_exited"]
[connection signal="area_entered" from="Goal" to="Player" method="_on_goal_area_entered"]
[connection signal="area_exited" from="Goal" to="Player" method="_on_goal_area_exited"]
[connection signal="area_entered" from="Back" to="Player" method="_on_back_area_entered"]
[connection signal="area_exited" from="Back" to="Player" method="_on_back_area_exited"]
